# lichen

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  package.sh
assets/: AppRun  lichen.desktop
src/: backend.rs  frontend.rs  ingestor.rs  main.rs  ngram.rs  syntect_frontend.rs  tree_iterator.rs
