[package]
name = "lichen"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "4.6.0"
itertools = "0.10"
clap = "2.34.0"
onig = { version = "6.0", default-features = false }